--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,16 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/userid"
+        android:id="@+id/emailEditText"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="100dp"
         android:layout_marginBottom="42dp"
         android:ems="10"
-        android:hint="Usuário"
-        android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/pass"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.989"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,21 +26,21 @@
 
 
     <EditText
-        android:id="@+id/pass"
+        android:id="@+id/passwordEditText"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="31dp"
         android:ems="10"
-        android:hint="password"
+        android:hint="Senha"
         android:inputType="textPassword"
         android:password="true"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.529"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userid" />
+        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
     <TextView
         android:id="@+id/nomeapp"
@@ -51,7 +51,7 @@
         android:layout_marginEnd="148dp"
         android:layout_marginBottom="80dp"
         android:text="MY COOKIE APP"
-        app:layout_constraintBottom_toTopOf="@+id/userid"
+        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -61,15 +61,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="188dp"
-        android:background="#724F45"
-        android:backgroundTint="#724F45"
+        android:background="@color/brown"
         android:onClick="feed_receitas"
         android:text="Entrar"
-        android:textColorLink="#724F45"
+        android:textColor="@color/white"
+        app:iconTint="#724F45"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
     <ImageView
         android:id="@+id/imageView3"
@@ -84,5 +84,39 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/cookie" />
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="173dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="138dp"
+        android:layout_marginBottom="32dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:text="Criar Conta"
+        android:textColor="@color/brown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/googleSignInButton"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/googleSignInButton"
+        android:layout_width="218dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="96dp"
+        android:layout_marginTop="41dp"
+        android:layout_marginEnd="97dp"
+        android:layout_marginBottom="99dp"
+        android:text="Login com Google"
+        android:textColor="@color/white"
+        android:background="@color/brown"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
